--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<h1>Hallo Welt!</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf8">
+        <meta name="viewport" content="width-device-width, initial-scale=1.0">
+        <title>
+            Startseite Solution Navigator
+        </title>
+    </head>
+
+        <meta charset="utf8">
+        <meta name="viewport" content="width-device-width, initial-scale=1.0">
+
+
+    <body>
+        <h1 align="center">Mein Solution Navigator</h1>
+        <a href="ue1.html">Übung 1</a>
+
+    </body>
+</html>
+        
+
+    
