--- a/index.html
+++ b/index.html
@@ -8,13 +8,10 @@
         </title>
     </head>
 
-        <meta charset="utf8">
-        <meta name="viewport" content="width-device-width, initial-scale=1.0">
-
-
     <body>
         <h1 align="center">Mein Solution Navigator</h1>
         <a href="ue1.html">Übung 1</a>
+        <a href="ue2.html">Übung 2</a>
 
     </body>
 </html>
