--- a/ue3.html
+++ b/ue3.html
@@ -4,15 +4,16 @@
         <meta charset="utf8">
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
         <title>
-            Startseite Solution Navigator
+            Übung 3
         </title>
     </head>
 
     <body>
-        <h1 align="center">Mein Solution Navigator</h1>
-        <a href="ue1.html">Übung 1</a>
-        <a href="ue2.html">Übung 2</a>
-        <a href="ue3.html">Übung 3</a>
+        <h1 align="center">Übung 3</h1>
+        <a href="ue3_1.html">Aufgabe 3.1 Flexbox</a>
+        <a href="ue3_2.html">Aufgabe 3.2 Grid</a>
+        <a href="ue3_3.html">Aufgabe 3.3 Landing Page</a>
+        
     </body>
 </html>
         
