--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="ue3.html">Übung 3</a>
         <a href="ue4.html">Übung 4</a>
         <a href="ue5.html">Übung 5</a>
+        <a href="ue6.html">Übung 6</a>
     </body>
 </html>
         
