--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <a href="ue4.html">Übung 4</a>
         <a href="ue5.html">Übung 5</a>
         <a href="ue6.html">Übung 6</a>
+        <a href="ue7.js">Übung 7</a>
+        <a href="ue7_2.js">Übung 7.2</a>
     </body>
 </html>
         
