--- a/ue12.html
+++ b/ue12.html
@@ -59,7 +59,8 @@
       <section>
         <input type="radio" name="article" id="article1"/>
         <article>
-            <pre><!--Um Lost Updates zu vermeiden verwende ich File locking -->
+            <pre>
+                &lt;!--Um Lost Updates zu vermeiden verwende ich File locking --&gt;
                 &lt;?php
                 $file_path = 'register_data.json';
                 
