--- a/ue3.html
+++ b/ue3.html
@@ -10,15 +10,17 @@
             .auswahl ul {
               list-style-type: none;
               padding: 0;
-      
+              
               & li {
                 display: inline-block;
                 color: #333;
                 border: 1px solid #ccc;
                 cursor: pointer;
+                background-color: #e2b6ce;
+                border-radius: 10px;
               }
               & li:hover {
-                background-color: #eee;
+                background-color: #e493be;
               }
               & label {
                 cursor: pointer;
