--- a/ue1.html
+++ b/ue1.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="utf8">
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+        <script>hljs.highlightAll();</script>
+
         <title>
             Übung 1 Lösungen
         </title>
@@ -12,13 +16,15 @@
         padding: 0;
 
         & li {
-          display: inline-block;
-          color: #333;
-          border: 1px solid #ccc;
-          cursor: pointer;
+            display: inline-block;
+            color: #333;
+            border: 1px solid #ccc;
+            cursor: pointer;
+            background-color: #e2b6ce;
+            border-radius: 10px;
         }
         & li:hover {
-          background-color: #eee;
+          background-color:  #e493be;
         }
         & label {
           cursor: pointer;
@@ -32,6 +38,46 @@
       input[type="radio"]:not(:checked) ~ article {
         display: none;
       }
+
+   /*   @media screen and (max-width: 820px) {
+                .auswahl li {
+                    display: block;
+                    margin-bottom: 5px;
+                }
+
+                .auswahl label {
+                    display: block;
+                    width: 100%;
+                    text-align: center;
+                }
+
+                header h1, section h4 {
+                    text-align: left;
+                }
+
+                /* Weitere responsive Anpassungen hier hinzufügen 
+            }
+
+    
+
+            @media screen and (max-width: 500px) {
+    .auswahl li {
+        padding: 5px;
+    }
+
+    .auswahl label {
+        font-size: smaller; /* Reduzierte Schriftgröße für kleinere Bildschirme 
+    }
+
+    body {
+        margin: 0;
+        padding: 0;
+    }
+
+    header, section {
+        padding: 10px;
+    }
+}*/
         </style>
     </head>
     <body>
@@ -93,7 +139,7 @@
                 <li>In einer Webanwendung benötigen Sie eine OPTIONS-Anfrage, die die Optionen des Servers vor dem eigentlichen Zugriff erfragen soll. Aus Performancegründen soll die Abfrage aber cacheable sein. Wie könnten Sie dafür eine Lösung angehen?</li>
             </ol>
             <p><ins>Meine Lösung: </ins></p>
-            <table border="2"> <!--Tabelle iwann schöner machen-->
+            <table border="2"> 
                 <tr>
                     <th><b>HTTP STATUS CODE</b></th>
                     <th><b>Bedeutung</b></th>
@@ -127,7 +173,6 @@
     <section>
         <input type="radio" name="article" id="article3"/>
         <article>
-            <!-- schöner machen!-->
             <h4>Aufgabe 1.3: Quiz zu HTML</h4>
             <p><b>Frage 1/6: Was ist HTML?</b></p>
             <p>&#9745; Eine Auszeichnungssprache</p>
@@ -172,7 +217,6 @@
     <section>
         <input type="radio" name="article" id="article5"/>
             <article>
-            <!-- vllt geht das effizienter? und schöner!-->
             <h4> Aufgabe 1.5: Lückentext zu HTML</h4>
             <p>Alle <mark>markierten</mark> Bereiche stellen die Lösung dar</p>
             <pre>
@@ -229,11 +273,13 @@
         <article>
         <h4>Aufgabe 1.7: HTML-Wireframe</h4>
         <p>Die Aufgabe bestand darin, ein gegebenes Wireframe exakt nachzubauen, ohne CSS, nur mit HTML-Tags</p>
-        <p>Hier ein kleiner Ausschnitt:<a href="ue1wireframe.html">Um zum Wireframe zu gelangen klicken Sie hier</a> </p>
-        <iframe src="ue1wireframe.html" title="Kleiner Ausschnitt"></iframe>
+        <a href="ue1wireframe.html" style="background-color: rgb(224, 169, 219);"><b>Um sich das Wireframe auf einer eigenen Seite anzusehen klicken Sie hier</b></a>
+        <p>Hier in klein als Iframe: </p>
+        <iframe src="ue1wireframe.html" title="Kleiner Ausschnitt" width="600" height="500"></iframe>
 
         <p><ins>Meine Code-Lösung um das Wireframe exakt nachzubauen: </ins></p>
         <pre>
+            <code>
 &lt;!DOCTYPE html&gt;
 &lt;html&gt;
     &lt;head&gt;
@@ -297,6 +343,7 @@
         &lt;hr&gt;
     &lt;/body&gt;
 &lt;/html&gt;
+</code>
         </pre>
         <hr>
         </article>
