übung 10 schöner gemacht

--- a/ue10.html
+++ b/ue10.html
@@ -7,31 +7,22 @@
             Übung 10
         </title>
         <style>
-            li {
-                margin-bottom: 5px; /*abstand zw rednern*/
-            }
-            .timer-container {
-                display: inline-block; /*timer wird neben redner angezeigt*/
-                margin-left: 5px;
-            }
-            .timer-container div {
-                display: inline-block; /*button neben zeit*/
-                margin-right: 5px;
-            }
     
             .auswahl ul {
             list-style-type: none;
             padding: 0;
     
             & li {
-              display: inline-block;
-              color: #333;
-              border: 1px solid #ccc;
-              cursor: pointer;
-            }
-            & li:hover {
-              background-color: #eee;
-            }
+                display: inline-block;
+                color: #333;
+                border: 1px solid #ccc;
+                cursor: pointer;
+                background-color: #e2b6ce;
+                border-radius: 10px;
+              }
+              & li:hover {
+                background-color: #e493be;
+              }
             & label {
               cursor: pointer;
               padding: 10px;
@@ -76,7 +67,7 @@
       </ul>
       <br>
       <p>> Erläutern Sie den Unterschied von TypeScript zu anderen objekt-orientierten, statisch typisierten Programmiersprachen wie Java und C#.</p>
-        <table border="2"> <!--Tabelle iwann schöner machen-->
+        <table border="2"> 
             <tr>
                 <th><b></b></th>
                 <th><b>JavaScript</b></th>
