--- a/auflistung.html
+++ b/auflistung.html
@@ -36,9 +36,9 @@ html, body, .container {
   width: 100%;
   height: 100%;
   background: 
-    url(https://i.ibb.co/g9pr0Ld/clouds1000-b.png) 0 200px,
-    url(https://i.ibb.co/g9pr0Ld/clouds1000-b.png) 0px 300px,
-    url(https://i.ibb.co/NYpgsBj/clouds1000-blur-b.png) 0px 300px;
+    url(https://i.ibb.co/TYDW6qX/Wolken.png) 0 200px,
+    url(https://i.ibb.co/TYDW6qX/Wolken.png) 0px 300px,
+    url(https://i.ibb.co/6nDGKfZ/Wolken-Blur.png) 0px 300px;
   animation: wind 300s linear infinite;
   z-index: -1; /*damit hintergrund hinter content ist*/
 }
@@ -211,7 +211,7 @@ span.buttonInhalt {
       border-radius: 10px;
     }
 
-    .dropdown:hover .dropdown-content {
+    .dropbtn:hover .dropdown-content {
       display: block;
     margin-top: 10px;
     left: -1px;
