--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@ html, body, .container {
   width: 100%;
   height: 100%;
   background: 
-    url(https://i.ibb.co/g9pr0Ld/clouds1000-b.png) 0 200px,
-    url(https://i.ibb.co/g9pr0Ld/clouds1000-b.png) 0px 300px,
-    url(https://i.ibb.co/NYpgsBj/clouds1000-blur-b.png) 0px 300px;
+    url(https://i.ibb.co/TYDW6qX/Wolken.png) 0 200px,
+    url(https://i.ibb.co/TYDW6qX/Wolken.png) 0px 300px,
+    url(https://i.ibb.co/6nDGKfZ/Wolken-Blur.png) 0px 300px;
   animation: wind 100s linear infinite;
   z-index: -1; /*damit hintergrund hinter content ist*/
 }
