--- a/monatlich.html
+++ b/monatlich.html
@@ -130,9 +130,9 @@
   width: 100%;
   height: 100%;
   background: 
-    url(https://i.ibb.co/g9pr0Ld/clouds1000-b.png) 0 200px,
-    url(https://i.ibb.co/g9pr0Ld/clouds1000-b.png) 0px 300px,
-    url(https://i.ibb.co/NYpgsBj/clouds1000-blur-b.png) 0px 300px;
+    url(https://i.ibb.co/TYDW6qX/Wolken.png) 0 200px,
+    url(https://i.ibb.co/TYDW6qX/Wolken.png) 0px 300px,
+    url(https://i.ibb.co/6nDGKfZ/Wolken-Blur.png) 0px 300px;
   animation: wind 500s linear infinite;
   z-index: -1; /*damit hintergrund hinter content ist*/
 }
@@ -502,7 +502,7 @@ span.buttonInhalt {
 
   function updateMonJahr() {
     const monatAktElement = document.getElementById("aktMonat");
-    const monthNames = ["Januar", "Februar", "März", "April", "May", "Juni", "Juli", "August", "September", "Oktober", "November", "Dezember"];
+    const monthNames = ["Januar", "Februar", "März", "April", "Mai", "Juni", "Juli", "August", "September", "Oktober", "November", "Dezember"];
     monatAktElement.innerText = `${monthNames[monatAkt]} ${JahrAkt}`;
   }
 
