--- a/ue7.html
+++ b/ue7.html
@@ -365,7 +365,7 @@ haeufigsteWoerter();
     <section>
         <input type="radio" name="article" id="article4"/>
         <article>
-            <a href="ue7_2.js">Um zur JS Datei zu gelangen klicken Sie hier</a>
+            <a href="7_2\ue7_2.js">Um zur JS Datei zu gelangen klicken Sie hier</a>
         
     </article>
     </section>
