--- a/ue8.html
+++ b/ue8.html
@@ -518,8 +518,8 @@ BBBBBBBBBB
   <input type="radio" name="article3" id="article33"/>
   <article4>
 
-        <a href="ue8_3.html">Um das Ergebnis zu sehen klicke hier.</a><br><br>
-        <a href="ue8_3.json">Hier gelangt Ihr zur JSON Datei der Aufgabe</a>
+        <a href="8_3/ue8_3.html">Um das Ergebnis zu sehen klicke hier.</a><br><br>
+        <a href="8_3/ue8_3.json">Hier gelangt Ihr zur JSON Datei der Aufgabe</a>
       
 </article4>
 </section>
