--- a/ue9.html
+++ b/ue9.html
@@ -121,7 +121,7 @@
 <section>
     <input type="radio" name="article2" id="article22"/>
     <article3>
-        <a href="ue9_2.html">Klicke hier um das Resultat zu sehen.</a>
+        <a href="9_2/ue9_2.html">Klicke hier um das Resultat zu sehen.</a>
         
 </article3>
 </section>
