--- a/extras.html
+++ b/extras.html
@@ -246,7 +246,7 @@
     <section>
         <input type="radio" name="article" id="article4"/>
         <article>
-            <a href="/ES6/demo.html" style="background-color: rgb(224, 169, 219);"><b>Um zu einer interaktiven (ES6) Seite zu gelangen klicke hier.  </b></a>
+            <a href="ES6/demo.html" style="background-color: rgb(224, 169, 219);"><b>Um zu einer interaktiven (ES6) Seite zu gelangen klicke hier.  </b></a>
             <p>Hier habe ich die Codes der JavaScript Dateien aufgeführt:</p>
             
             <article>
@@ -300,7 +300,7 @@
             <article>
                 <a href="DOM.html" style="background-color: rgb(224, 169, 219);"><b>Klicke auf diesen Link um Beispiele zu sehen die die unterschiedlichen Fälle zur DOM Selektion &- Manipulation abdecken </b></a>
                 <br><br>
-                <a href="/catExtra/cats.html" style="background-color: rgb(237, 176, 232);"><b>Klicke hier für ein weiteres kleines Beispiel </b></a>
+                <a href="catExtra/cats.html" style="background-color: rgb(237, 176, 232);"><b>Klicke hier für ein weiteres kleines Beispiel </b></a>
             <hr>
         </article>
     </section>
