--- a/8_3/ue8_3.html
+++ b/8_3/ue8_3.html
@@ -59,7 +59,7 @@
         let data;
         holen();
         async function holen(){
-             request= await fetch('8_3/ue8_3.json').catch(console.error);
+             request= await fetch('ue8_3.json').catch(console.error);
              data= await request.json();
         }
        
